# fastapi-rls-multi-tenant

./: .env  .env.test  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b49e2bf85aa_add_case_status_change_type.py  2a37263a67be_added_tenant_and_user.py  4185f6f685eb_set_ownership_and_grants_for_app_role.py  53184ca3391f_create_ping.py  5b6df6d193f9_added_case_and_case_events.py  f10adf536bc9_disable_rls_on_identity_tables.py
app/: main.py
app/api/: deps.py  health.py
app/api/v1/: auth.py  cases.py  ping.py  tenant.py  user.py
app/core/: config.py  database.py  logging_config.py  security.py
app/core/tests/: test_security.py
app/crud/: case.py  ping.py  tenant.py  user.py
app/db/: public.py  rls.py  session.py
app/db/init/: 001_roles.sql
app/domain/: case_enum.py  roles.py
app/models/: __init__.py  case.py  case_events.py  ping.py  tenant.py  user.py
app/schemas/: auth.py  case.py  ping.py  tenant.py  user.py
app/service/: auth.py  case.py
app/service/tests/: test_auth.py  test_case.py
app/tests/: conftest.py  test_auth.py  test_cases.py  test_smoke.py
app/utils/: slug.py
app/utils/tests/: test_slug.py
